# cub3d

./: .gitignore  CMakeLists.txt  Makefile  a.out  map.cub  map2.cub  test_error.sh
error_test/: color_error_2.cub  colors.cub  colors_error.cub  map_espace.cub  map_no_spawn.cub  map_open.cub  multi_spawn.cub  multi_tex.cub  no_colors.cub  no_cub.txt  no_maps.cub  no_textures.cub  resolution.cub  resolution_0.cub  texture_no_xpm.cub  textures.cub  white_with_space.cub  wrong_spawn_carac.cub
images/: cobblestone.xpm  diamond_block.xpm  diamond_ore.xpm  end_crystal.xpm  fractal1.xpm  fractal2.xpm  fractal3.xpm  fractal4.xpm  grass.xpm  test.xpm
includes/: cub3d.h
libft/: Makefile  ft_atoi.c  ft_atoi_base.c  ft_itoa_base.c  ft_putnbr_base.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  get_next_line.c  libft.h
libft/libft/: ft_atoi_base.c  ft_itoa_base.c  ft_strjoin.c  ft_strlen.c  get_next_line.c  libft.h
libft/srcs/: ft_flags.c  ft_printf_pointer.c
srcs/: check_map.c  error_check.c  events.c  get.c  init.c  main.c  move.c  parser.c  raycast.c  rotate.c  save.c  sprite.c  verif.c  wall_color.c  wall_textures.c
